@startuml

interface ServiceProviderAProviderInterface{
     public function getLoginManager(): LoginManagerInterface;
     public function getFriendsManager(): FriendManagerInterface;
     public function getAddressManager(): AddressManagerInterface;
     public function getReceiveMessageHandle():ReceiveMessageHandleInterface;
     public function getMomentsManager():MomentsManagerInterface;
     public function getConfig():Config;
     public function getSendMessageManager():SendMessageManagerInterface;
}

interface MiddlewareInterface
{
    public function handle(MessageInterface $request, \Closure $next);
}

class MessageMiddleware implements MiddlewareInterface{
}

class TextMessageMiddleware implements MiddlewareInterface{
}

class ImageMessageMiddleware implements MiddlewareInterface{
}

class WechatBot {
    protected ServiceProviderAProviderInterface $serviceProvider
    protected middleware $middleware
    protected UserInterface $user
}

class MiddlewareService {
    protected MiddlewareInterface[MessageMiddleware,TextMessageMiddleware,ImageMessageMiddleware] $serviceProvider
}

interface SendInterface{
    public function send(FriendInterface|GroupInterface $to, TextInterface $text);
    public function sendFile(FriendInterface|GroupInterface $to, FileInterface $file);
    public function sendImage(FriendInterface|GroupInterface $to, ImageInterface $image);
    public function sendVoice(FriendInterface|GroupInterface $to, VoiceInterface $voice);
    public function sendVideo(FriendInterface|GroupInterface $to, VideoInterface $video);
}

interface UserInterface extends SendInterface
{
    public function getWxId(): string;
    public function getNickName(): string;
    public function getDeviceType(): string;
    public function getUin(): int;
    public function getHeadUrl(): string;
    public function getWAccount(): string;
    public function getSex(): int;
    public function getMobilePhone(): string;
    public function getStatus(): string;
    public function setGroupList(GroupListInterface $groupList);
    public function getGroupList(): GroupListInterface;
    public function setFriend(?FriendInterface $friend);
    public function getFriend(): ?FriendInterface;
    public function setAddressList(AddressListInterface $addressList);
    public function getAddressList(): AddressListInterface;

}

interface LoginManagerInterface
{
    public function getQRCode(): QRCodeResponseInterface;

    public function getUserInfo(): UserResponseInterface;
}

interface ReceiveMessageHandleInterface
{
    public function dataToMessageFormat(array $data):MessageInterface;
}


interface MessageInterface
{
    public function getContent(): string;
    public function getFromUser(): string;
    public function getMsgId(): int;
    public function getNewMsgId(): int;
    public function getSelf(): bool;
    public function getTimestamp(): int;
    public function getToUser(): string;
    public function getWId(): string;
    public function getOptions(): array;
    public function getData(): array;
    public function getWcId(): string;
    public function getAccount(): string;
    public function toUser(): UserInterface;
}

note top of MessageInterface : MessageInterface

interface PrivateChatMessageInterface extends MessageInterface
{
    public function toFromUser(): FriendInterface;
}

interface GroupChatMessageInterface extends MessageInterface
{
    public function toFromGroup():GroupInterface;
}
interface TextMessageInterface extends PrivateChatMessageInterface,GroupChatMessageInterface
{
}
interface ImageMessageInterface extends PrivateChatMessageInterface,GroupChatMessageInterface
{
    public function getImg():string;
    public function downloadImage();
}

class Server {
    wechatBot = $wechatBot
}

WechatBot *-- ServiceProviderAProviderInterface : $serviceProvider
note right on link : 服务提供者

WechatBot *-- UserInterface : $user
WechatBot *-- MiddlewareService : $middleware
note right on link : 中间件服务



ServiceProviderAProviderInterface *-- LoginManagerInterface : getLoginManager()
ServiceProviderAProviderInterface *-- ReceiveMessageHandleInterface : getReceiveMessageHandle()

MessageInterface *-- UserInterface : toUser()
PrivateChatMessageInterface *-- FriendInterface : toFromUser()
GroupChatMessageInterface *-- GroupInterface : toFromGroup()

MiddlewareInterface *-- MessageInterface : handle()
MiddlewareService *-- MessageMiddleware
MiddlewareService *-- TextMessageMiddleware
MiddlewareService *-- ImageMessageMiddleware

ReceiveMessageHandleInterface *-- MessageInterface : dataToMessageFormat()


Server -down-> WechatBot : uses

@enduml
